--- a/RedEdrTester/RedEdrTester.vcxproj.filters
+++ b/RedEdrTester/RedEdrTester.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="..\RedEdr\dllinjector.cpp">
       <Filter>Source Files\existing</Filter>
     </ClCompile>
-    <ClCompile Include="..\RedEdr\event_producer.cpp">
+    <ClCompile Include="..\RedEdr\eventproducer.cpp">
       <Filter>Source Files\existing</Filter>
     </ClCompile>
     <ClCompile Include="..\RedEdrShared\logging.cpp">
