--- a/RedEdrShared/RedEdrShared.vcxproj
+++ b/RedEdrShared/RedEdrShared.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="loguru.cpp" />
     <ClCompile Include="piping.cpp" />
+    <ClCompile Include="ranges.cpp" />
     <ClCompile Include="RedEdrShared.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
@@ -140,6 +141,7 @@
     <ClInclude Include="logging.h" />
     <ClInclude Include="loguru.hpp" />
     <ClInclude Include="piping.h" />
+    <ClInclude Include="ranges.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
