--- a/RedEdrTester/RedEdrTester.vcxproj
+++ b/RedEdrTester/RedEdrTester.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="..\RedEdr\eventproducer.cpp" />
     <ClCompile Include="..\RedEdr\kernelinterface.cpp" />
     <ClCompile Include="..\RedEdr\logreader.cpp" />
+    <ClCompile Include="..\RedEdr\meminfo.cpp" />
     <ClCompile Include="..\RedEdr\processcache.cpp" />
     <ClCompile Include="..\RedEdr\processinfo.cpp" />
     <ClCompile Include="RedEdrTester.cpp" />
