--- a/RedEdrTester/RedEdrTester.vcxproj
+++ b/RedEdrTester/RedEdrTester.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;OUTPUT_STDOUT;UNICODE;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)RedEdr/;$(SolutionDir)RedEdrShared/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)RedEdrShared/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -134,15 +134,18 @@
     <ClCompile Include="..\RedEdrShared\loguru.cpp" />
     <ClCompile Include="..\RedEdrShared\piping.cpp" />
     <ClCompile Include="..\RedEdrShared\utils.cpp" />
-    <ClCompile Include="..\RedEdr\analyzer.cpp" />
     <ClCompile Include="..\RedEdr\config.cpp" />
     <ClCompile Include="..\RedEdr\dllinjector.cpp" />
-    <ClCompile Include="..\RedEdr\eventproducer.cpp" />
+    <ClCompile Include="..\RedEdr\event_aggregator.cpp" />
+    <ClCompile Include="..\RedEdr\event_augmenter.cpp" />
+    <ClCompile Include="..\RedEdr\event_detector.cpp" />
+    <ClCompile Include="..\RedEdr\event_processor.cpp" />
     <ClCompile Include="..\RedEdr\kernelinterface.cpp" />
-    <ClCompile Include="..\RedEdr\logreader.cpp" />
-    <ClCompile Include="..\RedEdr\meminfo.cpp" />
-    <ClCompile Include="..\RedEdr\processcache.cpp" />
-    <ClCompile Include="..\RedEdr\processinfo.cpp" />
+    <ClCompile Include="..\RedEdr\mem_dynamic.cpp" />
+    <ClCompile Include="..\RedEdr\mem_static.cpp" />
+    <ClCompile Include="..\RedEdr\process.cpp" />
+    <ClCompile Include="..\RedEdr\process_query.cpp" />
+    <ClCompile Include="..\RedEdr\process_resolver.cpp" />
     <ClCompile Include="RedEdrTester.cpp" />
   </ItemGroup>
   <ItemGroup>
