--- a/elam_driver/elam_driver.vcxproj
+++ b/elam_driver/elam_driver.vcxproj
@@ -28,6 +28,7 @@
     <DriverType>KMDF</DriverType>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
     <ConfigurationType>Driver</ConfigurationType>
+    <Driver_SpectreMitigation>false</Driver_SpectreMitigation>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <TargetVersion>Windows10</TargetVersion>
@@ -65,11 +66,11 @@
       </ExceptionHandling>
     </ClCompile>
     <DriverSign>
-      <FileDigestAlgorithm>
-      </FileDigestAlgorithm>
+      <FileDigestAlgorithm>SHA256</FileDigestAlgorithm>
     </DriverSign>
     <PostBuildEvent>
-      <Command>powershell -ep bypass -f "$(SolutionDir)sign_file.ps1" "$(SolutionDir)ppl_runner.pfx" "$(TargetDir)$(TargetFileName)"</Command>
+      <Command>powershell -ep bypass -f "$(SolutionDir)sign_file.ps1" "$(SolutionDir)rededr_ppl.pfx" "$(TargetDir)$(TargetFileName)"
+copy "$(TargetDir)$(TargetFileName)" C:\RedEdr</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Sign</Message>
